Fixing Contrast in Menus

--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -21,7 +21,7 @@ $black : $rangitoto;
 $sec-highlight: mix($white, $sec-color, 60%);
 $highlight: mix($white, $pri-color, 20%);
 $shadow: 	mix($black, $pri-color, 20%);
-$dark-shadow: mix($black, $pri-color, 40%);
-$dark-grey: mix($black, $grey, 20%);
+$dark-shadow: mix($black, $pri-color, 60%);
+$dark-grey: mix($black, $grey, 60%);
 $breadcrumb: $dark-shadow;
 $anchor: $limeade;
